--- a/app/page.module.css
+++ b/app/page.module.css
@@ -23,13 +23,47 @@
     text-align: center;
 }
 
+/* header */
+.header {
+    position: relative;
+    margin: 10px 0;
+}
+
 .headerH1 {
     font-size: 24px;
-    margin: 10px 0 0 0;
+    margin: 0;
 }
 
 .headerH2 {
     font-size: 14px;
     color: #555;
     margin: 0;
+}
+
+.filterButton {
+    position: absolute;
+    font-size: 32px;
+    top: 0;
+    right: 5px;
+    cursor: pointer;
+}
+
+.filterBox {
+    position: relative;
+}
+
+.filterInput {
+    width: 100%;
+    box-sizing: border-box;
+    font-size: 16px;
+    margin: 10px 0;
+    padding-right: 30px;
+}
+
+.clearFilterButton {
+    position: absolute;
+    font-size: 25px;
+    top: 4px;
+    right: 4px;
+    cursor: pointer;
 }
